--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 absl-py==0.11.0
 alabaster==0.7.12
-anaconda-client==1.7.2
-anaconda-project==0.8.3
+
 applaunchservices==0.2.1
 appnope==0.1.0
 argh==0.26.2
 asgiref==3.3.1
 asn1crypto==1.3.0
 astor==0.8.1
-astropy==4.0.1.post1
+astropy
 atomicwrites==1.4.0
 attrs==19.3.0
 Babel==2.8.0
@@ -34,7 +33,6 @@ cryptography==3.3.2
 cycler==0.10.0
 Cython
 cytoolz==0.10.1
-dask @ file:///tmp/build/80754af9/dask-core_1594156306305/work
 decorator==4.4.2
 defusedxml==0.6.0
 distributed
